Installation de Sass et création des fichiers SCSS et CSS dans le thème enfant

--- a/wp-content/themes/foce-child/.gitignore
+++ b/wp-content/themes/foce-child/.gitignore
@@ -10,3 +10,13 @@
 # Optional: OS / editor noise
 .DS_Store
 Thumbs.db
+
+# Node
+node_modules/
+package-lock.json
+
+# Sass
+*.map
+
+# Build / dist
+dist/
